// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project - Add Data - Job Result should display Show Cuts link when current job is not Payfactors 1`] = `
<div
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  showCutsLabel={[Function String]}
  showDataCuts="false"
  toggleDataCutsLabel={[Function String]}
>
  <td
    class="growing-cell"
  >
    <div
      class="job-title"
    >
      Blend of Gas Operations Top Executive-Corporate, G (13001)
    </div>
    <div
      class="vendor"
    >
       Hewitt Associates - TCM Executive Long Term Incentives Total Compensation by Industry 
    </div>
    
    <span
      class="link"
    >
       Show Cuts 
    </span>
  </td><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  />
</div>
`;

exports[`Project - Add Data - Job Result should hide Show Cuts link when the current job is Payfactors 1`] = `
<div
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  toggleDataCutsLabel={[Function String]}
>
  <td
    class="growing-cell"
  >
    <div
      class="job-title"
    >
      Accountant II (1002)
    </div>
    <div
      class="vendor"
    >
       Payfactors effective date June 1, 2018 - PayFactors 
    </div>
    
  </td><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  />
</div>
`;
